--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@
 # Only exists if Bazel was run
 /bazel-out
 /.angular
+
+# firebase
 /.firebase
-/.vscode
+
 
 # dependencies
 /node_modules
@@ -27,6 +29,7 @@ speed-measure-plugin*.json
 *.sublime-workspace
 
 # IDE - VSCode
+/.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
