--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,37 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET,PUT,POST,DELETE"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "X-Requested-With"
+          },
+          {
+            "key": "Content-Security-Policy",
+            "value": "default-src 'unsafe-inline' *"
+          },
+          {
+            "key": "X-Content-Security-Policy",
+            "value": "default-src 'unsafe-inline' *"
+          },
+          {
+            "key": "X-WebKit-CSP",
+            "value": "default-src 'unsafe-inline' *"
+          }
+        ]
+      }
     ]
   }
 }
